[package]
name = "nettlesoup"
version = "0.1.0"
authors = ["jmcph4 <jmcph4.github@gmail.com>"]
edition = "2018"
default-run = "tftpd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = { git = "https://github.com/clap-rs/clap/" }

[[bin]]
name = "tftpd"
path = "src/server/main.rs"

[[bin]]
name = "tftpclient"
path = "src/client/main.rs"

